Fixed artwork.html interactions on mobile

--- a/Style.css
+++ b/Style.css
@@ -55,28 +55,6 @@ p {
 	font-size: 25px;
 	text-align: middle;
 }
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin-top: 87px;
-  height: 100%;
-  width: 100%;
-  opacity: 0.12;
-  transition: .5s ease;
-}
-
-.cats {
-	position: static;
-}
-
-.cats:hover .overlay {
-  opacity: 1; 
-}
-
 .navbar-custom {
     background-color:#ffffff;
     color:#000000;
